crates/concrete_driver/tests/invalid_programs/assign_unexpected_type.con
mod Simple {
    fn main() -> i32 {
        let var: i32 = 5;
        var = foo();
    }

    fn foo() {}
}
